@@ -15,3 +15,13 @@ $ bundle install
 # Add your Gemfile and Gemfile.lock to git and make your first commit:
 $ git add Gemfile Gemfile.lock
 $ git commit -m "Creating a Gemfile containing sinatra"
+
+# Create hello_world.rb as in this repository, then start the server
+$ ruby hello_world.rb
+2012-06-03 19:27:51] INFO  WEBrick 1.3.1
+[2012-06-03 19:27:51] INFO  ruby 1.9.2 (2011-07-09) [x86_64-darwin10.8.0]
+== Sinatra/1.3.2 has taken the stage on 4567 for development with backup from WEBrick
+[2012-06-03 19:27:51] INFO  WEBrick::HTTPServer#start: pid=19704 port=4567
+
+# Go to localhost:4567 in your browser!
+# Ctrl-c to stop the server.
